// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArtCard matches the snapshot with all the props 1`] = `
<div>
  <div
    class="art-card"
  >
    <div>
      <div
        class="image"
        style="background-image: url(original.png);"
      />
      <span
        class="art-card__sold"
      >
        Sold
      </span>
      <div
        class="art-card__description"
      >
        <div
          class="art-card__description-item"
        >
          10x 20
        </div>
        <div
          class="art-card__description-item"
        >
          <span
            class="art-card__price art-card__price--sold"
          >
            $123
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ArtCard matches the snapshot with minimal props 1`] = `
<div>
  <div
    class="art-card"
  >
    <div>
      <div
        class="image"
        style="background-image: url(original.png);"
      />
      <span
        class="art-card__sold"
      >
        Sold
      </span>
      <div
        class="art-card__description"
      >
        <div
          class="art-card__description-item"
        >
          the title goes here
        </div>
      </div>
    </div>
  </div>
</div>
`;
